[package]
name = "sql_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
chrono = "0.4.39"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = "0.8.3"
tokio = "1.43.0"
tokio-postgres = "0.7.12"
